--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "Aniekan Winner",
   "license": "ISC",
   "devDependencies": {
+    "@supabase/supabase-js": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "vite": "^5.4.7",
-    "@supabase/supabase-js": "^2.0.0"
+    "rimraf": "^6.0.1",
+    "terser": "^5.38.1",
+    "vite": "^5.4.7"
   },
   "babel": {
     "presets": [
